--- a/ResumeBuilder/ResumeBuilder.csproj
+++ b/ResumeBuilder/ResumeBuilder.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PDFsharp" Version="6.1.1" />
+  </ItemGroup>
+
 </Project>
