--- a/.github/workflows/master_resumebuilder.yml
+++ b/.github/workflows/master_resumebuilder.yml
@@ -19,6 +19,8 @@ jobs:
         run: dotnet build --configuration Release
       - name: Publish with dotnet
         run: dotnet publish -c Release -o ${{ github.workspace }}/myapp
+      - name: List published files
+        run: dir ${{ github.workspace }}/myapp
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -51,3 +53,4 @@ jobs:
           app-name: 'ResumeBuilder'
           slot-name: 'Production'
           package: ${{ github.workspace }}/myapp
+
