--- a/.github/workflows/ResumeBuilder.yml
+++ b/.github/workflows/ResumeBuilder.yml
@@ -28,17 +28,17 @@ jobs:
     - name: Test
       run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
     - name: Publish
-      run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
+      run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ github.workspace }}/ResumeBuilder/published"
     
-    # Dodany krok, który wylistuje pliki po publikacji
+    # Dodajemy krok do wylistowania plików w folderze po publikacji
     - name: List published files
-      run: dir "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
+      run: dir "${{ github.workspace }}/ResumeBuilder/published"
 
     - name: Publish Artifacts
       uses: actions/upload-artifact@v3
       with:
         name: webapp
-        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        path: "${{ github.workspace }}/ResumeBuilder/published"
 
   deploy:
     runs-on: windows-latest
@@ -48,10 +48,10 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: webapp
-        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        path: "${{ github.workspace }}/ResumeBuilder/published"
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v3
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.ResumeBuilder_31D6 }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        package: "${{ github.workspace }}/ResumeBuilder/published"
