--- a/.github/workflows/master_resumebuilder.yml
+++ b/.github/workflows/master_resumebuilder.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - ResumeBuilder
 
 on:
@@ -21,17 +18,20 @@ jobs:
         with:
           dotnet-version: '8.x'
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+      - name: Restore dependencies
+        run: dotnet restore
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      - name: Build with dotnet
+        run: dotnet build --configuration Release --no-restore
+
+      - name: Publish
+        run: dotnet publish -c Release -o ${{ github.workspace }}/myapp  # Użyj github.workspace zamiast DOTNET_ROOT
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{ github.workspace }}/myapp
 
   deploy:
     runs-on: windows-latest
@@ -52,5 +52,5 @@ jobs:
         with:
           app-name: 'ResumeBuilder'
           slot-name: 'Production'
-          package: .
+          package: .  # Użyj '.' ponieważ to odnosi się do bieżącego katalogu
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_7994E6F38FA24D99A297652960E4479A }}
